fixed list layout unnecessary gaps

--- a/frontend/src/app/shared/nav-menu/nav-menu.component.scss
+++ b/frontend/src/app/shared/nav-menu/nav-menu.component.scss
@@ -3,7 +3,7 @@
   background-color: #fff;
   border-radius: 5px;
   box-shadow: 0px 1px 4px #e5e9f2;
-  margin: 25px 0 0;
+  margin: 25px auto 0;
 }
 
 :host(.activeChild) {
